    MYSQL_OPT_LOCAL_INFILE) (Andrey)

- PDO OCI driver:
  . Fixed bug #55768 (PDO_OCI can't resume Oracle session after it's been killed)
  (mikhail dot v dot gavrilov at gmail dot com, Chris Jones, Tony)

- Phar:
  . Fixed bug #52013 (Unable to decompress files in a compressed phar). (Hannes)
  . Fixed bug #53872 (internal corruption of phar). (Hannes)

- PHP-FPM SAPI:
  . Backported FR #54098 from 5.4 branch (Lowered process manager
    default value). (fat)
  . Backported FR #52052 from 5.4 branch (Added partial syslog support). (fat)
  . Implemented FR #54577 (Enhanced status page with full status and details
    about each processes. Also provide a web page (status.html) for
    real-time FPM status. (fat)

- Session:
  . Fixed bug #55267 (session_regenerate_id fails after header sent). (Hannes)

- NSAPI SAPI:
  . Don't set $_SERVER['HTTPS'] on unsecure connection (bug #55403). (Uwe
    Schindler)

- SimpleXML:
  . Reverted the SimpleXML->query() behaviour to returning empty arrays
    instead of false when no nodes are found as it was since 5.3.3 
    (bug #48601). (chregu, rrichards)
    
- String:
  . Fixed bug #55674 (fgetcsv & str_getcsv skip empty fields in some tab-separated 
    records). (Laruence)

- SPL:
  . Fixed bug #55807 (Wrong value for splFileObject::SKIP_EMPTY).
    (jgotti at modedemploi dot fr, Hannes)
    
- XSL:
  . Added xsl.security_prefs ini option to define forbidden operations within XSLT 
    stylesheets, default is not to enable write operations. This option won't be 
    in 5.4, since there's a new method. Bug #54446 (Chregu, Nicolas Gregoire)


23 Aug 2011, PHP 5.3.8

- Core:
  . Fixed bug #55439 (crypt() returns only the salt for MD5). (Stas)

- OpenSSL:
  . Reverted a change in timeout handling restoring PHP 5.3.6 behavior,
    as the new behavior caused mysqlnd SSL connections to hang (#55283).
    (Pierre, Andrey, Johannes)

18 Aug 2011, PHP 5.3.7
- Upgraded bundled SQLite to version 3.7.7.1. (Scott)